--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+haproxy (1.5.0-1~dev19-1) unstable; urgency=medium
+
+  * New upstream release
+  * Includes Upstream security fixes
+
+ -- Anthony Somerset <anthony@somersettechsolutions.co.uk>  Thu, 27 Jun 2013 08:51:51 +0100
+
 haproxy (1.5.0-1~dev17-1) unstable; urgency=low
 
   * New upstream release
