--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+haproxy (1.5.0-1~dev22-1) unstable; urgency=medium
+
+  * New upstream release
+  * New Polling system
+
+ -- Anthony Somerset <anthony@somersettechsolutions.co.uk>  Wed, 09 Apr 2014 13:51:51 +0100
+
 haproxy (1.5.0-1~dev21-1) unstable; urgency=medium
 
   * New upstream release
