--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+haproxy (1.5.0-1~dev24-1) unstable; urgency=medium
+
+  * New upstream release
+
+ -- Anthony Somerset <anthony@somersettechsolutions.co.uk>  Thu, 08 May 2014 13:31:51 +0100
+
 haproxy (1.5.0-1~dev22-1) unstable; urgency=medium
 
   * New upstream release
