--- a/README
+++ b/README
@@ -1,9 +1,9 @@
                          ----------------------
                              HAProxy how-to
                          ----------------------
-                            version 1.5-dev21
+                            version 1.5-dev24
                              willy tarreau
-                               2013/12/17
+                               2014/04/26
 
 
 1) How to build it
@@ -30,6 +30,7 @@ and assign it to the TARGET variable :
   - freebsd     for FreeBSD 5 to 8.0 (others untested)
   - osx         for Mac OS/X
   - openbsd     for OpenBSD 3.1 to 5.2 (others untested)
+  - aix51       for AIX 5.1
   - aix52       for AIX 5.2
   - cygwin      for Cygwin
   - generic     for any other OS.
@@ -183,7 +184,11 @@ There is some documentation in the doc/ directory :
       essential HTTP basic concepts, and details all the configuration file
       syntax (keywords, units). It also describes the log and stats format. It
       is normally always up to date. If you see that something is missing from
-      it, please report it as this is a bug.
+      it, please report it as this is a bug. Please note that this file is
+      huge and that it's generally more convenient to review Cyril Bonté's
+      HTML translation online here :
+
+           http://cbonte.github.io/haproxy-dconv/configuration-1.5.html
 
     - haproxy-en.txt / haproxy-fr.txt : these are the old outdated docs. You
       should never need them. If you do, then please report what you didn't
