--- a/doc/haproxy.1
+++ b/doc/haproxy.1
@@ -65,7 +65,7 @@ Display HAProxy's version and all build options.
 
 .TP
 \fB\-d\fP
-Start in foregreound with debugging mode enabled.
+Start in foreground with debugging mode enabled.
 When the proxy runs in this mode, it dumps every connections,
 disconnections, timestamps, and HTTP headers to stdout. This should
 NEVER be used in an init script since it will prevent the system from
@@ -181,7 +181,7 @@ Both signals can be used to quickly stop the daemon.
 Dumps the status of all proxies and servers into the logs. Mostly used for trouble-shooting purposes.
 .TP
 \- \fBSIGQUIT\fP
-Dumps information about memory pools into the logs. Mostly used for debugging purposes.
+Dumps information about memory pools on stderr. Mostly used for debugging purposes.
 .TP
 \- \fBSIGPIPE\fP
 This signal is intercepted and ignored on systems without \fBMSG_NOSIGNAL\fP.
